# my_tg_bot

./: .dockerignore  .env.example  .gitignore  .tool-versions  Dockerfile  README.md  agents.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
bot/: locker_http.py  main.py
bot/clients/: __init__.py  mongo_client.py  redis_client.py  sqlite_client.py  transcription_clients.py
bot/handlers/: __init__.py  admin_handler.py  gpt_handlers.py  locker_handler.py  security.py  start_handler.py  voice_handler.py
bot/handlers/prompts/: helpful_assistant_prompt.txt
deploy/scripts/: deploy-my-tg-bot
deploy/sudoers/: cicd-my-tg-bot
deploy/systemd/: my-tg-bot-deploy.service  my-tg-bot.service
docs/: deploy.md
docs/plans/: 20260422-telegram-llm-streaming.md  20260422-transcript-chunk-alias-history.md  20260525-cicd-vps-deployment.md
docs/plans/completed/: 20260411-bot-dependency-refresh-and-parakeet-migration.md  20260411-deploy-my-tg-bot-to-netcup-vps.md  20260412-add-admin-adduser-command.md  20260412-per-user-feature-gates.md  20260412-replace-mongo-with-sqlite.md  20260412-silent-chat-message-flow.md  20260422-transcript-chunk-alias-history.md  20260422-voice-transcript-chat-aliases.md  (+2 more)
scripts/: deploy.sh
tests/: conftest.py  test_locker_http.py
tests/clients/: test_sqlite_client.py  test_transcription_clients.py
tests/e2e/: test_chat_openrouter_e2e.py
tests/handlers/: test_gpt_handlers.py  test_handlers.py  test_locker_handler.py  test_security.py  test_voice_handler.py
