[project]
name = "my-tg-bot"
version = "0.1.0"
description = "Personal Telegram bot"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx",
  "llama-index",
  "llama-index-llms-openrouter",
  "motor",
  "pydantic",
  "python-telegram-bot",
  "redis",
  "replicate",
  "requests",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-asyncio",
]

[tool.uv]
package = false
